--- a/styles.css
+++ b/styles.css
@@ -1,46 +1,18 @@
-* {
-  box-sizing: border-box;
+.mobileChat{
+  background: #fcfcfc;
+  height: 80vh;
+  width: 60%;
+  margin: 60px auto;
+  border-radius: 40px;
+  position: relative;
+  box-shadow: 0 0 3px rgb(109, 107, 107);
 }
 
-body {
-  margin: 0;
-  font-family: system-ui, sans-serif;
-  color: black;
-  background-color: white;
-}
-
-nav {
+.date{
+  position: absolute;
+  top: 5px;
   display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: center;
-  padding: 0.5rem;
-  gap: 0.5rem;
-  border-bottom: solid 1px #aaa;
-  background-color: #eee;
-}
-
-nav a {
-  display: inline-block;
-  min-width: 9rem;
-  padding: 0.5rem;
-  border-radius: 0.2rem;
-  border: solid 1px #aaa;
-  text-align: center;
-  text-decoration: none;
-  color: #555;
-}
-
-nav a[aria-current='page'] {
-  color: #000;
-  background-color: #d4d4d4;
-}
-
-main {
-  padding: 1rem;
-}
-
-h1 {
-  font-weight: bold;
-  font-size: 1.5rem;
+  flex-direction: row;
+  justify-content: space-around;
+  width: 100%;
 }
